playing with css to try and fix layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,9 +83,9 @@
     padding:0;
 }
 
-.bg-navbar {
+/* .bg-navbar {
     background-color: #000;
-}
+} */
 
 .nav-item {
     position:relative;
